apps/headwaters/the-intersect/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headwaters
spec:
  template:
    metadata:
      labels:
        k8s.lfp.rocks/version: "sha-7923367"
    spec:
      containers:
        - name: headwaters
          image: ghcr.io/alpineworks/headwaters:sha-7923367
